force-app/main/default/objects/Quote/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Customer address including street, postal code and country</description>
    <formula>Opportunity.Account.BillingStreet + &apos;, &apos; +Opportunity.Account.BillingPostalCode + &apos;, &apos; + Opportunity.Account.BillingCity + &apos;, &apos; +  Opportunity.Account.BillingState + &apos;, &apos; +  Opportunity.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>