force-app/main/default/objects/Quote/fields/CardProduct__c.field-meta.xml
<CustomField>
    <fullName>CardProduct__c</fullName>
    <description>This filed defines the type of Card product being offered to the prospect/customer. Station Card and E-Mobility Card will enable Number of selected stations</description>
    <label>Card Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QuoteType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routex</fullName>
            </value>
            <value>
                <fullName>Station Card</fullName>
            </value>
            <value>
                <fullName>E-Mobility Card</fullName>
            </value>
            <value>
                <fullName>CO2 Neutral Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>