force-app/main/default/objects/Quote/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Date that the Quote was closed</description>
    <label>Closed date</label>
    <type>Date</type>
</CustomField>