force-app/main/default/objects/Quote/fields/CompetitiveBandFuel__c.field-meta.xml
<CustomField>
    <fullName>CompetitiveBandFuel__c</fullName>
    <description>Competitive band chosen by the agent. This field will define the approval process needed.</description>
    <label>Competitive Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO1</fullName>
            </value>
            <value>
                <fullName>CO2</fullName>
            </value>
            <value>
                <fullName>CO3</fullName>
            </value>
            <value>
                <fullName>CO4</fullName>
            </value>
            <value>
                <fullName>CO5</fullName>
            </value>
            <value>
                <fullName>CO6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>