force-app/main/default/objects/Quote/fields/CreditApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditApprovalStatus__c</fullName>
    <label>Credit Approval Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>