force-app/main/default/objects/Quote/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>E-mail of contact for who the quote is being prepared - Decision Maker identified in the opportunity</description>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail</label>
    <type>Text</type>
</CustomField>