force-app/main/default/objects/Quote/fields/EMobilityTariff__c.field-meta.xml
<CustomField>
    <fullName>EMobilityTariff__c</fullName>
    <description>Selection available when the quote type = E-Mobility</description>
    <label>E-MobilityTariff</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QuoteType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tariff 1</fullName>
            </value>
            <value>
                <fullName>Tariff 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>