force-app/main/default/objects/Quote/fields/EstimatedRoadTollPayments__c.field-meta.xml
<CustomField>
    <fullName>EstimatedRoadTollPayments__c</fullName>
    <description>Either mapped from Lead/Opp (annual estimate), or entered manually here by Sales Acct Mgr (euro)</description>
    <label>Estimated Road Toll Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>