force-app/main/default/objects/Quote/fields/FuelVolumeBand__c.field-meta.xml
<CustomField>
    <fullName>FuelVolumeBand__c</fullName>
    <description>Defined based on the Total Potential Fuel Volume value</description>
    <inlineHelpText>Filled based on Total Potential Fuel Volume</inlineHelpText>
    <label>Fuel Volume Band</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QuoteType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V10</fullName>
            </value>
            <value>
                <fullName>V30</fullName>
            </value>
            <value>
                <fullName>V60</fullName>
            </value>
            <value>
                <fullName>V100</fullName>
            </value>
            <value>
                <fullName>V150</fullName>
            </value>
            <value>
                <fullName>V250</fullName>
            </value>
            <value>
                <fullName>V500</fullName>
            </value>
            <value>
                <fullName>V750</fullName>
            </value>
            <value>
                <fullName>V1000</fullName>
            </value>
            <value>
                <fullName>VM</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>