force-app/main/default/objects/Quote/fields/InternationalRoutexOffer__c.field-meta.xml
<CustomField>
    <fullName>InternationalRoutexOffer__c</fullName>
    <label>International Routex Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTX Base</fullName>
            </value>
            <value>
                <fullName>RTX OMV</fullName>
            </value>
            <value>
                <fullName>RTX NW1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>