force-app/main/default/objects/Quote/fields/InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceFrequency__c</fullName>
    <description>Invoicing frequency, field under Account</description>
    <formula>Value(TEXT(Opportunity.Account.InvoiceFrequency__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>