force-app/main/default/objects/Quote/fields/NonFuelCompetitivePackage__c.field-meta.xml
<CustomField>
    <fullName>NonFuelCompetitivePackage__c</fullName>
    <description>Competitive package chosen by the agent.</description>
    <label>Non-Fuel Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Fuel Package - NF1</fullName>
            </value>
            <value>
                <fullName>Non Fuel Package - NF2</fullName>
            </value>
            <value>
                <fullName>Non Fuel Package - NF3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>