force-app/main/default/objects/Quote/fields/NumberOfSelectedStations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSelectedStations__c</fullName>
    <description>Calculated based on the  Fuel Volume band and Card Product. This will enable additional discount in selected station. In case Routex is selected, this field displays N/A</description>
    <formula>IF( OR(ISPICKVAL(CardProduct__c , &apos;Routex&apos;),
ISPICKVAL(CardProduct__c , &apos;CO2 Neutral Card&apos;),
ISPICKVAL(CardProduct__c , &apos;E-mobility Card&apos;)), &apos;N/A&apos;, CASE(FuelVolumeBand__c, 
																																																							&apos;V10&apos;, &apos;1&apos;, &apos;V30&apos;, &apos;1&apos;,&apos;V60&apos;,&apos;1&apos;,&apos;V100&apos;,&apos;1&apos;,&apos;V150&apos;,&apos;2&apos;,&apos;V250&apos;,&apos;2&apos;,&apos;V500&apos;,&apos;3&apos;,&apos;V750&apos;,&apos;3&apos;,&apos;V1000&apos;,&apos;4&apos;,&apos;VM&apos;,&apos;4&apos;,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Selected Stations</label>
    <type>Text</type>
</CustomField>