force-app/main/default/objects/Quote/fields/NumberOfSteps__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSteps__c</fullName>
    <label>Number Of Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>