force-app/main/default/objects/Quote/fields/OMVCompanyName__c.field-meta.xml
<CustomField>
    <fullName>OMVCompanyName__c</fullName>
    <description>Based on legal entity</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity.Account.CompanyCode__r.Id ,Opportunity.Account.CompanyCode__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OMV Company Name</label>
    <type>Text</type>
</CustomField>