force-app/main/default/objects/Quote/fields/OtherProductsPayments__c.field-meta.xml
<CustomField>
    <fullName>OtherProductsPayments__c</fullName>
    <description>Other Products payments (e.g. LNG / Hydrogen/ E-Moblity Turnover)</description>
    <label>Other Products Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>