force-app/main/default/objects/Quote/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>This field will be used to display the appropriate Owner (if Queue or if User) in the column of the related lists</description>
    <formula>IF(

				MID(OwnerId,1,3) = &apos;005&apos;,

				Owner:User.FirstName + &apos; &apos; + Owner:User.LastName,

				Owner:Queue.QueueName

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>