force-app/main/default/objects/Quote/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <description>Field under Account</description>
    <formula>Value(TEXT(Opportunity.Account.PaymentTerm__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>