force-app/main/default/objects/Quote/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone of contact for who the quote is being prepared - Decision Maker identified in the opportunity</description>
    <formula>Contact.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>