force-app/main/default/objects/Quote/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <description>Defined based on the Total Potential Fuel Volume value</description>
    <formula>IF(ISPICKVAL(QuoteType__c, &apos;Fleet PP&apos;) , &apos;Pump Price&apos;, IF(ISPICKVAL(QuoteType__c, &apos;E-Mobility&apos;) , &apos;N/A&apos;, &apos;List Price&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Type</label>
    <type>Text</type>
</CustomField>