force-app/main/default/objects/Quote/fields/QuoteType__c.field-meta.xml
<CustomField>
    <fullName>QuoteType__c</fullName>
    <description>This field presents the quote type that will define the mandatory product for each type and the price type associated</description>
    <label>Quote Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuoteTypes</valueSetName>
    </valueSet>
</CustomField>