force-app/main/default/objects/Quote/fields/ReferencePrice__c.field-meta.xml
<CustomField>
    <fullName>ReferencePrice__c</fullName>
    <label>Reference Price</label>
    <summarizedField>QuoteLineItem.FuelPrice__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>