force-app/main/default/objects/Quote/fields/RequestedCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>RequestedCreditLimit__c</fullName>
    <formula>(TotalPotentialFuelVolume__c/12)*ReferencePrice__c*(InvoiceFrequency__c + PaymentTerm__c)/30+EstimatedRoadTollPayments__c *(InvoiceFrequency__c+PaymentTerm__c)/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>