force-app/main/default/objects/Quote/fields/SalesRepContact__c.field-meta.xml
<CustomField>
    <fullName>SalesRepContact__c</fullName>
    <description>Based on user (Sales Representative)</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Opportunity.Account.Owner.Id  , Opportunity.Account.Owner.FirstName + &apos; &apos; + Opportunity.Account.Owner.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative Contact</label>
    <type>Text</type>
</CustomField>