force-app/main/default/objects/Quote/fields/SalesRepEmail__c.field-meta.xml
<CustomField>
    <fullName>SalesRepEmail__c</fullName>
    <description>Based on user (Sales Representative)</description>
    <formula>Opportunity.Account.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative E-mail</label>
    <type>Text</type>
</CustomField>