force-app/main/default/objects/Quote/fields/SalesRepPhone__c.field-meta.xml
<CustomField>
    <fullName>SalesRepPhone__c</fullName>
    <description>Based on user (Sales Representative)</description>
    <formula>Opportunity.Account.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative Phone</label>
    <type>Text</type>
</CustomField>