force-app/main/default/objects/Quote/fields/SalesRepresentativeTitle__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentativeTitle__c</fullName>
    <description>Based on user (Sales Representative)</description>
    <formula>Opportunity.Account.Owner.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative Title</label>
    <type>Text</type>
</CustomField>