force-app/main/default/objects/Quote/fields/TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxNumber__c</fullName>
    <description>Customer VAT/Tax number if available</description>
    <formula>Opportunity.Account.VAT_Tax_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT/Tax Number</label>
    <type>Text</type>
</CustomField>