force-app/main/default/objects/Quote/fields/TotalPotentialFuelVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalPotentialFuelVolume__c</fullName>
    <description>Total quantity of diesel and gasoline based on quantity identified in the Opportunity</description>
    <label>Total Potential Fuel Volume [kL/y]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>