force-app/main/default/objects/Quote/fields/TradeRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>TradeRegistrationNumber__c</fullName>
    <description>Trade Registration Number if available</description>
    <formula>Opportunity.Account.TradeRegistrationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Registration Number</label>
    <type>Text</type>
</CustomField>