force-app/main/default/objects/Quote/fields/ValidityDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityDate__c</fullName>
    <defaultValue>ADDMONTHS(TODAY(),1)</defaultValue>
    <description>Identify the expiration date of the quote for the customer to be aware that he sould reply until x date. System default is 30 days.</description>
    <label>Validity Date</label>
    <type>Date</type>
</CustomField>