force-app/main/default/objects/Quote/fields/VASCompetitivePackage__c.field-meta.xml
<CustomField>
    <fullName>VASCompetitivePackage__c</fullName>
    <description>Competitive package chosen by the agent.</description>
    <label>VAS Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAS Base</fullName>
            </value>
            <value>
                <fullName>VAS1</fullName>
            </value>
            <value>
                <fullName>VAS2</fullName>
            </value>
            <value>
                <fullName>VAS3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>