force-app/main/default/objects/Quote/recordTypes/CEP_CARDS_QUOTE_WITH_APPROVAL.recordType-meta.xml
<RecordType>
    <fullName>CEP_CARDS_QUOTE_WITH_APPROVAL</fullName>
    <active>true</active>
    <description>Record Type for Cards for Quotes that need approval</description>
    <label>CEP Cards Quote with approval</label>
</RecordType>