force-app/main/default/objects/Quote/recordTypes/CEP_CARDS_QUOTES.recordType-meta.xml
<RecordType>
    <fullName>CEP_CARDS_QUOTES</fullName>
    <active>true</active>
    <description>record type for Cards on normal Quotes</description>
    <label>CEP Cards Quotes</label>
</RecordType>