force-app/main/default/objects/Quote/validationRules/CannotChangeFurtherStatusWithoutApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeFurtherStatusWithoutApproval</fullName>
    <active>true</active>
    <description>Cannot Change Status further without being sent to Approval</description>
    <errorConditionFormula>AND(
				Not($Setup.CEPSkipValidationRules__c.Quote__c ),
				Not(ISPICKVAL(Status, &apos;Draft&apos;) ),
    
				RecordType.DeveloperName =&apos;CEP_CARDS_QUOTE_WITH_APPROVAL&apos;,
				Or(
									ISPICKVAL(ApprovalStatus__c , &apos;Not started&apos;),
								ISPICKVAL(ApprovalStatus__c , &apos;Started&apos;)
								 
				)
)</errorConditionFormula>
    <errorMessage>Please click on the button &quot;Submit for Approval&quot; before changing the status to submitted</errorMessage>
</ValidationRule>