force-app/main/default/objects/Quote/validationRules/EMobilityAndQuoteTypeVerification.validationRule-meta.xml
<ValidationRule>
    <fullName>EMobilityAndQuoteTypeVerification</fullName>
    <active>true</active>
    <description>Check if the field &quot;E-Mobility Tariff&quot; is changed and the &quot;quote type&quot; != &quot;E-Mobility&quot;</description>
    <errorConditionFormula>AND( Not($Setup.CEPSkipValidationRules__c.Quote__c ),
 !ISPICKVAL(QuoteType__c , &apos;E-Mobility&apos;),
 ISCHANGED(EMobilityTariff__c)
)</errorConditionFormula>
    <errorMessage>This field only applies for E-Mobility quotes</errorMessage>
</ValidationRule>