force-app/main/default/objects/Quote/validationRules/PreventChangeInfoOnQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangeInfoOnQuote</fullName>
    <active>true</active>
    <description>Prevent user to edit Quote if the status is different than Draft</description>
    <errorConditionFormula>OR(
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(ApprovalStatus__c, &apos;Denied&apos;),
								OR(
												ISPICKVAL(Status , &apos;Presented&apos;),
												ISPICKVAL(Status , &apos;Denied&apos;),
												ISPICKVAL(Status , &apos;Draft&apos;),
												ISPICKVAL(Status , &apos;Approved&apos;),
												ISPICKVAL(Status , &apos;Submitted&apos;),
												ISPICKVAL(Status, &apos;Accepted&apos;)
								)
				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								Not(ISPICKVAL(Status, &apos;Draft&apos;) ),
								Not(ISPICKVAL(Status, &apos;Rejected&apos;) ),
								Not(ISCHANGED(ApprovalStatus__c)),
								Not(ISCHANGED(Status))

				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(ApprovalStatus__c, &apos;Completed&apos;),
								Or(
												ISPICKVAL(Status , &apos;Draft&apos;),
												ISPICKVAL(Status, &apos;Rejected&apos;)
								)

				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(PRIORVALUE(Status) , &apos;Presented&apos;),
								OR(
												ISPICKVAL(Status , &apos;Rejected&apos;),
												ISPICKVAL(Status , &apos;Draft&apos;),
												ISPICKVAL(Status , &apos;Approved&apos;),
												ISPICKVAL(Status , &apos;Submitted&apos;)
								)
				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(PRIORVALUE(Status) , &apos;Accepted&apos;),
								OR(
												ISPICKVAL(Status , &apos;Rejected&apos;),
												ISPICKVAL(Status , &apos;Draft&apos;),
												ISPICKVAL(Status , &apos;Approved&apos;),
												ISPICKVAL(Status , &apos;Presented&apos;),
												ISPICKVAL(Status , &apos;Denied&apos;),
												ISPICKVAL(Status , &apos;Submitted&apos;)
								)
				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(PRIORVALUE(Status) , &apos;Approved&apos;),
								OR(
												ISPICKVAL(Status , &apos;Rejected&apos;),
												ISPICKVAL(Status , &apos;Draft&apos;),
												ISPICKVAL(Status , &apos;Accepted&apos;),
												ISPICKVAL(Status , &apos;Denied&apos;),
												ISPICKVAL(Status , &apos;Submitted&apos;)
								)
				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(PRIORVALUE(Status) , &apos;Denied&apos;),
								OR(
												ISPICKVAL(Status , &apos;Rejected&apos;),
												ISPICKVAL(Status , &apos;Draft&apos;),
												ISPICKVAL(Status , &apos;Approved&apos;),
												ISPICKVAL(Status , &apos;Presented&apos;),
												ISPICKVAL(Status , &apos;Accepted&apos;),
												ISPICKVAL(Status , &apos;Submitted&apos;)
								)
				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(PRIORVALUE(Status) , &apos;Draft&apos;),
								OR(
												ISPICKVAL(Status , &apos;Denied&apos;),
												ISPICKVAL(Status , &apos;Accepted&apos;)
								)
				),
				AND(
								Not($Setup.CEPSkipValidationRules__c.Quote__c ),
								ISPICKVAL(PRIORVALUE(Status) , &apos;Submitted&apos;),
								OR(
												ISPICKVAL(Status , &apos;Draft&apos;)
								)
				)

)</errorConditionFormula>
    <errorMessage>Cannot change Information of the Quote after being submitted or presented</errorMessage>
</ValidationRule>