force-app/main/default/objects/Quote/validationRules/PreventUserFromChangingQuote.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventUserFromChangingQuote</fullName>
    <active>true</active>
    <description>Quote Type cannot be changed</description>
    <errorConditionFormula>AND(
Not($Setup.CEPSkipValidationRules__c.Quote__c ),
OR(
ISCHANGED(QuoteType__c)
))</errorConditionFormula>
    <errorMessage>It&apos;s not possible to change the Quote Type of an existing Quote. To change it, you must create new Quote with the correct type</errorMessage>
</ValidationRule>