force-app/main/default/objects/Quote/validationRules/TotalPotentialFuelVolume.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalPotentialFuelVolume</fullName>
    <active>true</active>
    <description>validation: error will be presented if this value is higher than the &quot; Total Potential Fuel Volume &quot; of the opportunity</description>
    <errorConditionFormula>AND(
Not($Setup.CEPSkipValidationRules__c.Quote__c ),
 TotalPotentialFuelVolume__c &gt;  Opportunity.TotalPotentialFuelVolume__c 
)</errorConditionFormula>
    <errorMessage>This value is higher than Total Potential Fuel Volume identified in the Opportunity. Please update opportunity accordingly before changing the quote Total Potential Fuel Volume.</errorMessage>
</ValidationRule>